--- a/GDemo/ThirdViewController.xib
+++ b/GDemo/ThirdViewController.xib
@@ -234,19 +234,19 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">dataSource</string>
-						<reference key="source" ref="873029372"/>
-						<reference key="destination" ref="372490531"/>
-					</object>
-					<int key="connectionID">6</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="873029372"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
-					<int key="connectionID">7</int>
+					<int key="connectionID">17</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">dataSource</string>
+						<reference key="source" ref="873029372"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">18</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -324,10 +324,18 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">18</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DEYRefreshMutiSectionTableViewController</string>
+					<string key="superclassName">DEYRefreshTableViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DEYRefreshMutiSectionTableViewController.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">DEYRefreshTableViewController</string>
 					<string key="superclassName">UITableViewController</string>
@@ -354,18 +362,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">ThirdViewController</string>
-					<string key="superclassName">DEYRefreshTableViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">nextStep:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">nextStep:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">nextStep:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
+					<string key="superclassName">DEYRefreshMutiSectionTableViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="headView">UIView</string>
 						<string key="imgBtn">EGOImageButton</string>
