--- a/GDemo/UserInfoCell.xib
+++ b/GDemo/UserInfoCell.xib
@@ -71,8 +71,7 @@
 								<string key="IBUIText">Name</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAAA</bytes>
-									<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
 								<object class="NSColor" key="IBUIHighlightedColor" id="28397571">
 									<int key="NSColorSpace">3</int>
@@ -80,11 +79,11 @@
 								</object>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
+									<int key="type">2</int>
 									<double key="pointSize">17</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
+									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -228,9 +227,9 @@
 						<reference key="object" ref="1014437288"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="169149456"/>
-							<reference ref="900941288"/>
 							<reference ref="406355917"/>
 							<reference ref="812512697"/>
+							<reference ref="900941288"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
