--- a/GDemo/V2FirstViewController.xib
+++ b/GDemo/V2FirstViewController.xib
@@ -12,6 +12,7 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
+			<string>IBUIBarButtonItem</string>
 			<string>IBUINavigationBar</string>
 			<string>IBUINavigationItem</string>
 			<string>IBUISegmentedControl</string>
@@ -38,16 +39,17 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUINavigationBar" id="941868051">
+					<object class="IBUINavigationBar" id="399047779">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">290</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUISegmentedControl" id="770450626">
-								<reference key="NSNextResponder" ref="941868051"/>
+							<object class="IBUISegmentedControl" id="607381821">
+								<reference key="NSNextResponder" ref="399047779"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{96, 7}, {128, 30}}</string>
-								<reference key="NSSuperview" ref="941868051"/>
+								<reference key="NSSuperview" ref="399047779"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="111623723"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -83,23 +85,29 @@
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="770450626"/>
+						<reference key="NSNextKeyView" ref="607381821"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="125327139">
+						<object class="NSColor" key="IBUIBackgroundColor" id="915699716">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwLjUwNTg4MjM1MjkgMC43NDUwOTgwMzkyAA</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<reference key="IBUITintColor" ref="125327139"/>
-						<array key="IBUIItems">
-							<object class="IBUINavigationItem" id="95778457">
-								<reference key="IBUINavigationBar" ref="941868051"/>
-								<reference key="IBUITitleView" ref="770450626"/>
+						<reference key="IBUITintColor" ref="915699716"/>
+						<array class="NSMutableArray" key="IBUIItems">
+							<object class="IBUINavigationItem" id="307733421">
+								<reference key="IBUINavigationBar" ref="399047779"/>
+								<reference key="IBUITitleView" ref="607381821"/>
+								<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="465639717">
+									<string key="IBUITitle">建群</string>
+									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									<int key="IBUIStyle">1</int>
+									<reference key="IBUINavigationItem" ref="307733421"/>
+								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
 					</object>
-					<object class="IBUITableView" id="414830183">
+					<object class="IBUITableView" id="111623723">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 44}, {320, 416}}</string>
@@ -124,7 +132,7 @@
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="941868051"/>
+				<reference key="NSNextKeyView" ref="399047779"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -167,7 +175,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">tableView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="414830183"/>
+						<reference key="destination" ref="111623723"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
@@ -175,14 +183,14 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">segmentController</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="770450626"/>
+						<reference key="destination" ref="607381821"/>
 					</object>
 					<int key="connectionID">11</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
-						<reference key="source" ref="414830183"/>
+						<reference key="source" ref="111623723"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">13</int>
@@ -190,10 +198,18 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="414830183"/>
+						<reference key="source" ref="111623723"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">14</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">creatNewGroup:</string>
+						<reference key="source" ref="465639717"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">17</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -208,8 +224,8 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="414830183"/>
-							<reference ref="941868051"/>
+							<reference ref="111623723"/>
+							<reference ref="399047779"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -226,29 +242,35 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="414830183"/>
+						<reference key="object" ref="111623723"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="941868051"/>
+						<reference key="object" ref="399047779"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="95778457"/>
+							<reference ref="307733421"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="95778457"/>
+						<reference key="object" ref="307733421"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="770450626"/>
+							<reference ref="607381821"/>
+							<reference ref="465639717"/>
 						</array>
-						<reference key="parent" ref="941868051"/>
+						<reference key="parent" ref="399047779"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="770450626"/>
-						<reference key="parent" ref="95778457"/>
+						<reference key="object" ref="607381821"/>
+						<reference key="parent" ref="307733421"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">16</int>
+						<reference key="object" ref="465639717"/>
+						<reference key="parent" ref="307733421"/>
 					</object>
 				</array>
 			</object>
@@ -259,6 +281,7 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -268,7 +291,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">14</int>
+			<int key="maxID">17</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
